--- a/ObjetoTransferencia/ObjetoTransferencia.csproj
+++ b/ObjetoTransferencia/ObjetoTransferencia.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cliente.cs" />
-    <Compile Include="ObjetoTransferencia.cs" />
+    <Compile Include="ClienteColecao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
